--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -964,6 +964,7 @@
   <script src="assets/vendor/venobox/venobox.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
+  {{ encore_entry_script_tags('app') }}
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
