--- a/templates/chartjs/index.html.twig
+++ b/templates/chartjs/index.html.twig
@@ -6,9 +6,20 @@
 <br><br>
  
  
- <div style="height: 500px;">
+{% for chart in charts %}
+<div class="container" style="max-width: 800px;">
+    <div class="chart-container" style="height: 300px; width: 100%;">
         {{ render_chart(chart) }}
     </div>
+ <small>Source:
+        <a href="https://www.nhm.ac.uk/" class="link">National History Museum</a> courtesy of
+        <a href="https://github.com/kjanjua26/jurassic-park" class="link">https://github.com/kjanjua26/jurassic-park</a>
+    </small>
+</div>
+
+<br><br>
+
+{% endfor %}
 
 {# You can pass HTML attributes as a second argument to add them on the <canvas> tag #}
 
