--- a/templates/chartjs/index.html.twig
+++ b/templates/chartjs/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {% block title %}Hello ChartjsController!{% endblock %}
 
@@ -13,7 +13,7 @@
     </div>
  <small>Source:
         <a href="https://www.nhm.ac.uk/" class="link">National History Museum</a> courtesy of
-        <a href="https://github.com/kjanjua26/jurassic-park" class="link">https://github.com/kjanjua26/jurassic-park</a>
+        <a href="https://github.com/cadalevans/Simulate-iot" class="link">https://github.com/cadalevans/Simulate-iot</a>
     </small>
 </div>
 
@@ -23,5 +23,7 @@
 
 {# You can pass HTML attributes as a second argument to add them on the <canvas> tag #}
 
-    <br><br>
+   <hr>
+<br>
 {% endblock %}
+
