--- a/templates/module/new.html.twig
+++ b/templates/module/new.html.twig
@@ -1,14 +1,20 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {% block body %}
 
 <b>
 <br>
 
- <h1>Modules</h1>
  
-<div class="container" style="max-width: 800px;">
-    <div class="table-responsive">
+ 
+<div class="container-fluid h-custom">
+				<div class="row d-flex justify-content-center align-items-center h-100">
+					<div class="col-md-9 col-lg-6 col-xl-5">
+						<img src="assets/img/hero-img.png" class="img-fluid" alt="Sample image">
+					</div>
+					<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+       
+        <div class="table-responsive">
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
@@ -32,8 +38,13 @@
             </tbody>
         </table>
     </div>
+    </div>
+</div>
+ </div>
 </div>
 
 
+<hr>
+<br>
 
     {% endblock %}
