Another recent commit 2 with modification added on template

--- a/templates/module/index.html.twig
+++ b/templates/module/index.html.twig
@@ -18,6 +18,9 @@
 					</div>
 					<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <div class="example-wrapper">
+                     <p class="font-italic">
+               Add module like: Phone, Watch, Car ...
+              </p>
                     {{ form_start(form) }}
                          {{ form_row(form.name) }}
                              {{ form_row(form.category) }}
