--- a/templates/chartjs/index.html.twig
+++ b/templates/chartjs/index.html.twig
@@ -6,15 +6,21 @@
 <br><br>
  
  
-{% for chart in charts %}
+{% for moduleName, chart in charts %}
 <div class="container" style="max-width: 800px;">
     <div class="chart-container" style="height: 300px; width: 100%;">
         {{ render_chart(chart) }}
     </div>
- <small>Source:
-        <a href="https://www.nhm.ac.uk/" class="link">National History Museum</a> courtesy of
+
+        <br>
+  <small> <p class="font-italic">
+               Name: {{ moduleName }}
+              </p>
+              <br>
+       Source: <a href="https://www.nhm.ac.uk/" class="link">National History Museum</a> courtesy of
         <a href="https://github.com/cadalevans/Simulate-iot" class="link">https://github.com/cadalevans/Simulate-iot</a>
     </small>
+    <hr>
 </div>
 
 <br><br>
